--- a/src/components/TwitchLivestreamToast.astro
+++ b/src/components/TwitchLivestreamToast.astro
@@ -34,7 +34,7 @@ const translation = Translations[locale as keyof typeof Translations]
     })
 </script>
 
-<style lang="scss">
+<style>
     #toast {
         position: fixed;
         bottom: 1rem;
