--- a/src/components/defer/InstagramPosts.astro
+++ b/src/components/defer/InstagramPosts.astro
@@ -21,7 +21,7 @@ const posts = await Astro.locals.runtime.env.STORE.get("INSTAGRAM_POSTS", "json"
     )}
 </section>
 
-<style lang="scss">
+<style>
     section {
         display: flex;
         gap: 3rem;
