--- a/src/components/defer/TwitchLivestream.astro
+++ b/src/components/defer/TwitchLivestream.astro
@@ -19,7 +19,7 @@ const isLive = Object.keys(livestreamData || {}).length > 0
     )
 </script>
 
-<style lang="scss">
+<style>
     a {
         display: inline-flex;
         justify-content: center;
