--- a/src/components/list/Member.astro
+++ b/src/components/list/Member.astro
@@ -15,7 +15,7 @@ const Wrapper = member.link ? 'a' : "div"
     <p>{member.name}</p>
 </Wrapper>
 
-<style lang="scss">
+<style>
     a,
     div {
         font-weight: 600;
