--- a/src/components/list/Project.astro
+++ b/src/components/list/Project.astro
@@ -19,7 +19,7 @@ const translation = Translations[locale as keyof typeof Translations].projects
 	<img src={background.src} alt={project.name[locale as keyof typeof project.name]} width={background.width} height={background.height} loading="lazy" decoding="async" />
 </ul>
 
-<style lang="scss">
+<style>
 	.splide__slide {
 		height: 330px !important;
 
