--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -99,7 +99,7 @@ const translation = Translations[locale as keyof typeof Translations]
 </body>
 </html>
 
-<style lang="scss" define:vars={{ background }} is:global>
+<style define:vars={{ background }} is:global>
 		:root {
 			--bg-color: #393939;
 			--projects-bg-color: #555555;
