--- a/src/components/defer/YouTubeStatistics.astro
+++ b/src/components/defer/YouTubeStatistics.astro
@@ -36,7 +36,7 @@ const translation = Translations[locale as keyof typeof Translations].teaser
     nbSubscribersElement.remove()
 </script>
 
-<style lang="scss">
+<style>
     .hidden {
         display: none;
     }
