--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Contact from "@components/Contact.astro"
 
 <Layout>
 	<TwitchLivestreamToast />
-	<Teaser id="home" />
+	<Teaser />
 	<Productions />
 	<Projects />
 	<Association />
