fix: Plausible domain

--- a/src/components/Plausible.astro
+++ b/src/components/Plausible.astro
@@ -2,7 +2,7 @@
 	import { init } from '@plausible-analytics/tracker'
 
 	init({
-		domain: 'minarox.fr',
+		domain: 'rvandco.fr',
 		endpoint: 'https://plausible.minarox.fr/api/event',
 		outboundLinks: true
 	})
