--- a/src/components/Plausible.astro
+++ b/src/components/Plausible.astro
@@ -3,7 +3,7 @@
 
 	init({
 		domain: 'rvandco.fr',
-		endpoint: 'https://plausible.minarox.fr/api/event',
+		endpoint: 'https://stats.minarox.fr/api/event',
 		outboundLinks: true
 	})
 </script>
